# fractals

./: .gitignore  LICENSE  README.md  fractals.cabal
exe/: Main.hs
src/: Colour.hs  Drawing.hs  Fractal.hs  Image.hs
test/: Main.hs
