name:                fractals
version:             0.1.0.0
synopsis:            Generation of fractals
homepage:            https://github.com/fiwippi/fractals
license:             BSD3
license-file:        LICENSE
author:              Nadav Rahimi
copyright:           2022 Nadav Rahimi
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fractals
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fractals
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

library
  hs-source-dirs:      src
  exposed-modules:     Image
                     , Colour
                     , Fractal
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
